<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
        >
    <TableLayout  xmlns:android="http://schemas.android.com/apk/res/android"
                   android:orientation="horizontal"
                   android:layout_width="fill_parent"
                   android:layout_height="wrap_content"
            >

        <TableRow>
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    />
            <EditText
                    android:id="@+id/username"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/usernamehint"
                    />
        </TableRow>
        <TableRow>
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    />
            <EditText
                    android:id="@+id/password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    />
        </TableRow>
        <TableRow>
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    />
            <EditText
                    android:id="@+id/email"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    />
        </TableRow>
    </TableLayout>

    <TableLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TableRow>
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    />
            <RadioButton
                    android:id="@+id/man"
                    android:text="@string/man"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:checked="true"
                    />
            <RadioButton
                    android:id="@+id/woman"
                    android:text="@string/woman"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    />
        </TableRow>
    </TableLayout>
    <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <TableRow>
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hobby"
                    />
            <CheckBox
                    android:id="@+id/basketball"
                    android:text="@string/basketball"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:checked="true"
                    />
            <CheckBox
                    android:id="@+id/football"
                    android:text="@string/football"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    />
            <CheckBox
                    android:id="@+id/pingpong"
                    android:text="@string/pingpong"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    />
        </TableRow>
    </TableLayout>
    <Button
            android:id="@+id/register"
            android:text="@string/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

</LinearLayout>

